# clarifai-python

./: .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  .ruff.toml  .travis.yml  AGENTS.md  CHANGELOG.md  COMPLETION_REPORT.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MANIFEST.in  MODEL_RESOURCE_MANAGEMENT.md  PIPELINE_STEP_SECRETS_EXAMPLES.md  README.md  VERSION  appveyor.yml  assert-code-quality.sh  bug_api263_reproduce.py  clarifai_utils  client.py  demo.py  lint.sh  mime_util.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  sample_main.py  setup.py  setup_requirements.txt  sonar-project.properties  test_bug_api263.sh  test_with_proto.py  test_with_proto_example.py  test_with_proto_integration.py
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.jules/: bolt.md
clarifai/: __init__.py  cli.py  demo.py  errors.py  rag.py  utils.py  versions.py
docs/: Makefile  basics.rst  clarifai.rest.rst  clarifai.rst  conf.py  contributing.rst  index.rst  install.rst  pipeline_step_secrets.md  requirements.txt  tutorial-feedback.rst  tutorial-predict.rst  tutorial.rst  tutorial_predict.rst
examples/: agent_example.py  pipeline_dsl_asset_import.py  pipeline_dsl_text_pipeline.py  pipeline_input_overrides.md  text_utils.py  with_proto_demo.py
py/: README.md  client.py  mime_util.py  sample_main.py
pythonic-sglang/: config.yaml  requirements.txt
scripts/: app_and_key_for_tests.py  bump_version.sh  clarifai  key_for_tests.py  sync_repo.sh  tag_release.sh  update_pypi.sh
tests/: README.md  (+46 more)
(+749 files in other folders)
