[project]
name = "clarifai"
requires-python = ">=3.9"
dynamic = [
    "authors",
    "classifiers",
    "dependencies",
    "license",
    "optional-dependencies",
    "readme",  # For long_description
    "scripts",
    "version",
]


[tool.pytest.ini_options]
markers = ["requires_secrets: mark a test as requiring secrets to run", "coverage_only: mark a test as required to run for coverage purpose only"]
